added .nuspec file for nuget, more xml comments

--- a/libzopfli-sharp/libzopfli-sharp.csproj
+++ b/libzopfli-sharp/libzopfli-sharp.csproj
@@ -25,6 +25,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <DocumentationFile>bin\Debug\libzopfli-sharp.xml</DocumentationFile>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -33,6 +34,7 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <DocumentationFile>bin\Release\libzopfli-sharp.xml</DocumentationFile>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
@@ -65,10 +67,20 @@
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
+    <None Include="libzopfli-sharp.nuspec" />
     <None Include="NativeBinaries\amd64\zopfli.exp" />
     <None Include="NativeBinaries\amd64\zopfli.lib" />
     <None Include="NativeBinaries\x86\zopfli.exp" />
     <None Include="NativeBinaries\x86\zopfli.lib" />
+    <None Include="tools\uninstall.ps1">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Include="tools\GetZopfliPostBuildCmd.ps1">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Include="tools\install.ps1">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
