--- a/libzopfli-sharp.tests/libzopfli-sharp.tests.csproj
+++ b/libzopfli-sharp.tests/libzopfli-sharp.tests.csproj
@@ -87,6 +87,9 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="files\favicon.ico">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <Content Include="files\small-header.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
