--- a/.gitignore
+++ b/.gitignore
@@ -106,3 +106,6 @@ Generated_Code #added for RIA/Silverlight projects
 _UpgradeReport_Files/
 Backup*/
 UpgradeLog*.XML
+
+# Dont ignore fp.log file for unit tests
+!*fp.log
