--- a/libzopfli-sharp.tests/packages.config
+++ b/libzopfli-sharp.tests/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="DotNetZip" version="1.9.1.8" targetFramework="net45" />
-  <package id="FluentAssertions" version="2.1.0.0" targetFramework="net45" />
-  <package id="NUnit" version="2.6.2" targetFramework="net45" />
+  <package id="DotNetZip" version="1.10.1" targetFramework="net45" />
+  <package id="FluentAssertions" version="4.19.4" targetFramework="net45" />
+  <package id="NUnit" version="3.9.0" targetFramework="net45" />
+  <package id="NUnit3TestAdapter" version="3.9.0" targetFramework="net45" />
 </packages>
